--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ TOKEN_EXPIRATION_TIME=60
 
 
 MONGO_USERNAME=
-MONGO_PASSOWORD=
+MONGO_PASSWORD=
 MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DATABASE=auth
